# snip

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/commands/: AddCommand.cpp  AddCommand.hpp  CopyCommand.cpp  CopyCommand.hpp  DeleteCommand.cpp  DeleteCommand.hpp  FindCommand.cpp  FindCommand.hpp  ListCommand.cpp  ListCommand.hpp  SearchCommand.cpp  SearchCommand.hpp
src/display/: Renderer.cpp  Renderer.hpp
src/infra/: Clipboard.cpp  Clipboard.hpp  LLMSearch.hpp  LocalSearch.cpp  LocalSearch.hpp  SqliteStore.cpp  SqliteStore.hpp
src/interfaces/: IClipboard.hpp  ISearchEngine.hpp  IStore.hpp
src/models/: Snippet.hpp
src/services/: SnippetService.cpp  SnippetService.hpp
src/ui/: InteractiveSearch.cpp  InteractiveSearch.hpp
